fix: add dto in controllers , modify test cases and add user role in security.